// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frames Library Frames groups all the Webpack-related frames 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": "1-appFrame",
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="1-appFrame"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": "1-appFrame",
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
    <Group
      group={
        Array [
          Object {
            "id": "2-webpackBootstrapFrame",
            "location": Object {
              "source": Object {
                "url": "webpack:///webpack/bootstrap 01d88449ca6e9335a66f",
              },
            },
          },
          Object {
            "id": "3-webpackBundleFrame",
            "location": Object {
              "source": Object {
                "url": "https://foo.com/bundle.js",
              },
            },
          },
          Object {
            "id": "4-webpackBootstrapFrame",
            "location": Object {
              "source": Object {
                "url": "webpack:///webpack/bootstrap 01d88449ca6e9335a66f",
              },
            },
          },
          Object {
            "id": "5-webpackBundleFrame",
            "location": Object {
              "source": Object {
                "url": "https://foo.com/bundle.js",
              },
            },
          },
        ]
      }
      key="2-webpackBootstrapFrame"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": "1-appFrame",
          "location": Object {
            "source": Object {},
          },
        }
      }
    />
  </div>
</div>
`;

exports[`Frames Library Frames selectable framework frames 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 2,
          "library": "back",
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 3,
          "library": "back",
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
  </div>
</div>
`;

exports[`Frames Library Frames selectable framework frames 2`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
    <Group
      group={
        Array [
          Object {
            "id": 2,
            "library": "back",
            "location": Object {
              "source": Object {},
            },
          },
          Object {
            "id": 3,
            "library": "back",
            "location": Object {
              "source": Object {},
            },
          },
        ]
      }
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
  </div>
</div>
`;

exports[`Frames Library Frames toggling framework frames 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 2,
          "library": "back",
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 3,
          "library": "back",
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
  </div>
</div>
`;

exports[`Frames Library Frames toggling framework frames 2`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
    <Group
      group={
        Array [
          Object {
            "id": 2,
            "library": "back",
            "location": Object {
              "source": Object {},
            },
          },
          Object {
            "id": 3,
            "library": "back",
            "location": Object {
              "source": Object {},
            },
          },
        ]
      }
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
          "location": Object {
            "source": Object {},
          },
        }
      }
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
          "location": Object {
            "source": Object {},
          },
        }
      }
      shouldMapDisplayName={true}
    />
  </div>
</div>
`;

exports[`Frames Supports different number of frames disable frame truncation 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
        }
      }
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 2,
        }
      }
      hideLocation={false}
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 3,
        }
      }
      hideLocation={false}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 4,
        }
      }
      hideLocation={false}
      key="4"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 5,
        }
      }
      hideLocation={false}
      key="5"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 6,
        }
      }
      hideLocation={false}
      key="6"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 7,
        }
      }
      hideLocation={false}
      key="7"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
        }
      }
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 9,
        }
      }
      hideLocation={false}
      key="9"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 10,
        }
      }
      hideLocation={false}
      key="10"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 11,
        }
      }
      hideLocation={false}
      key="11"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 12,
        }
      }
      hideLocation={false}
      key="12"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 13,
        }
      }
      hideLocation={false}
      key="13"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 14,
        }
      }
      hideLocation={false}
      key="14"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 15,
        }
      }
      hideLocation={false}
      key="15"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 16,
        }
      }
      hideLocation={false}
      key="16"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 17,
        }
      }
      hideLocation={false}
      key="17"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 18,
        }
      }
      hideLocation={false}
      key="18"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 19,
        }
      }
      hideLocation={false}
      key="19"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 20,
        }
      }
      hideLocation={false}
      key="20"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
  </div>
</div>
`;

exports[`Frames Supports different number of frames empty frames 1`] = `
<div
  className="pane frames"
>
  <div
    className="pane-info empty"
  >
    Not paused
  </div>
</div>
`;

exports[`Frames Supports different number of frames one frame 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
        }
      }
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
  </div>
</div>
`;

exports[`Frames Supports different number of frames passes the getFrameTitle prop to the Frame component 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "displayName": "renderFoo",
          "id": 1,
          "location": Object {
            "line": 55,
            "source": Object {
              "url": "http://myfile.com/mahscripts.js",
            },
          },
        }
      }
      getFrameTitle={[Function]}
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={null}
      shouldMapDisplayName={true}
    />
  </div>
</div>
`;

exports[`Frames Supports different number of frames toggling the show more button 1`] = `
<div
  className="pane frames"
>
  <div
    role="list"
  >
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 1,
        }
      }
      hideLocation={false}
      key="1"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 2,
        }
      }
      hideLocation={false}
      key="2"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 3,
        }
      }
      hideLocation={false}
      key="3"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 4,
        }
      }
      hideLocation={false}
      key="4"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 5,
        }
      }
      hideLocation={false}
      key="5"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 6,
        }
      }
      hideLocation={false}
      key="6"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 7,
        }
      }
      hideLocation={false}
      key="7"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 8,
        }
      }
      hideLocation={false}
      key="8"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 9,
        }
      }
      hideLocation={false}
      key="9"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
    <Frame
      disableContextMenu={false}
      frame={
        Object {
          "id": 10,
        }
      }
      hideLocation={false}
      key="10"
      selectFrame={[MockFunction]}
      selectedFrame={
        Object {
          "id": 1,
        }
      }
      shouldMapDisplayName={true}
    />
  </div>
  <div
    className="show-more-container"
  >
    <button
      className="show-more"
      onClick={[Function]}
    >
      Collapse rows
    </button>
  </div>
</div>
`;
